Todo list page header,todo controls section alignment fixed

--- a/css/todoList.css
+++ b/css/todoList.css
@@ -98,7 +98,7 @@ padding: 0px;
   background-color:#c287e6/* #edece8*/;
   padding: 10px;
   font-family: "Poppins",sans-serif;
-  width: 1350px;
+  width: 1190px /*1350px*/;
   box-sizing: border-box;
 }
 .filters{
@@ -106,7 +106,7 @@ padding: 0px;
   float: left;
   margin-top: 11px;
   margin-right: 5px;
-  width: 184px;
+  width: 155px/*184px*/;
   border: 1px solid #d2a3bb;
 
   background-color: #e6b1cc;
@@ -175,7 +175,7 @@ padding: 0px;
 .select-list{
   background-color: white;
   border:none;
-  width: 155px;
+  width: 135px;
   height: 30px;
 }
 
@@ -192,7 +192,7 @@ padding: 0px;
 .dfilter{
   /*height: 20px;
   margin-right: 25px; */
-  width: 360px;
+  width: 314px/*360px*/;
 
 }
 
@@ -219,12 +219,11 @@ input [ type="date"]{
   /*border: 1px solid #ddd;*/
   border: 1px solid black;
   font-size: 20px;
-/*  font-weight: 300;
-*/  display: table;
+/*  font-weight: 300;*/
+  display: table;
   text-align: center;
   padding: 12px;
-   width: 1350px;
-
+  width:1190px /*1350px;*/
   box-sizing: border-box;
 
 }
